--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -32,7 +32,10 @@ jobs:
       - name: Build and run test
         env:
           RAILS_ENV: test
-          JWT_SECRET: secret
+          AUTH0_DOMAIN: "localhost"
+          AUTH0_CLIENT_ID: "some.random.id"
+          AUTH0_CLIENT_SECRET: "some.random.secret"
+          AUTH0_CONNECTION: "some.random.connection"
         run: |
           sudo apt-get -yqq install libpq-dev
           gem install bundler
